<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">shopping list</string>
    <string name="add">Add</string>
    <string name="list_new">New list</string>
    <string name="settings">Settings</string>
    <string name="list_rename">Rename list</string>
    <string name="list_delete">Delete list</string>
    <string name="list_send">Send list</string>
    <string name="list_select_all">List select all</string>
    <string name="about">About</string>
    <string name="list_new_dialog_message">Please enter new shopping list name</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="edit_item">Edit item</string>
    <string name="selected_item">Selected item</string>
    <string name="remove_item">Remove item</string>
    <string name="copy_item">Copy item</string>
    <string name="move_item">Move to another list group</string>
    <string name="unit">Unit</string>
    <string name="amount">Amount</string>
    <string name="price">Price 6.00</string>
    <string name="tags">Tags</string>
</resources>
